system/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    cloudlab.kerbaras.com/gateway-access: "true" # grafana behind the edge
