system/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Metrics, logs & dashboards
    gethomepage.dev/href: https://grafana.cloudlab.kerbaras.com
spec:
  parentRefs:
    - name: edge
      namespace: edge
      sectionName: https
  hostnames:
    - grafana.cloudlab.kerbaras.com
  rules:
    - backendRefs:
        - name: vm-grafana
          port: 80
